# tools-CLI

./: .editorconfig  .example.env  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
app/: base_64.py  calculator.py  music_downloader.py  pretty_json.py  quick_pass.py  translate.py  url_shorter.py  uuid_generator.py
app/constants/: calculator.py
app/data/: dto.py  utility.py
app/shared/: environments.py  quick_file_utils.py  utils.py  web_driver.py
app/utils/: calculators.py  file_utils.py  quick_file_utils.py  utils.py
provision/scripts/: git-init.sh  linters.sh  pre-commit-config.sh
tools/: base_64.py  uuid_generator.py
tools/data/: utility.py
tools/shared/: utils.py
