[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Joaquin Alvarez <alvarez.joaquinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pyperclip = "1.8.2"
pytube = "15.0.0"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pjson = "tools.pretty_json:format_json"
uuid = "tools.uuid_generator:uuid_generator"
enc = "tools.base_64:base_64_encode"
you = "tools.music_downloader:datadownload"
