[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Joaquin Alvarez <alvarez.joaquinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pyperclip = "1.8.2"
pytube = "15.0.0"
python-dotenv = "1.0.1"
pre-commit = "3.6.2"
selenium = "4.18.1"
black = "24.2.0"
flake8 = "7.0.0"

[flake8]
exclude = [".venv", ".git"]
max-line-length = 88
max-complexity = 10
ignore = ["E401", "E402"]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pjson = "app.pretty_json:format_json"
uuid = "app.uuid_generator:uuid_generator"
enc = "app.base_64:base_64_encode"
you = "app.music_downloader:datadownload"
quick = "app.quick_pass:sign_in"
